--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,17 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@material-ui/core": "^4.9.14",
-		"@material-ui/icons": "^4.9.1",
-		"@material-ui/lab": "^4.0.0-alpha.54",
-		"@material-ui/styles": "^4.9.14",
+		"@emotion/react": "^11.8.2",
+		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.5.1",
+		"@mui/lab": "^5.0.0-alpha.74",
+		"@mui/material": "^5.5.2",
+		"@mui/styles": "^5.5.1",
 		"axios": "^0.21.1",
 		"dayjs": "^1.8.28",
 		"jwt-decode": "^2.2.0",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-places-autocomplete": "^7.2.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
