MerryMeals name update

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FoodHub App",
-  "name": "FoodHub App Client",
+  "short_name": "MerryMeal App",
+  "name": "MerryMeal App Client",
   "icons": [
     {
       "src": "favicon.ico",
