--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,12 @@
 		"dayjs": "^1.11.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.8",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0",
+		"redux": "^4.1.2",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
