--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
 		"@mui/lab": "^5.0.0-alpha.75",
 		"@mui/material": "^5.5.3",
 		"@mui/styles": "^5.5.3",
+		"@mui/x-date-pickers": "^5.0.0-alpha.0",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.3",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.26.0",
+		"date-fns": "^2.28.0",
 		"dayjs": "^1.11.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
