--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.26.0",
 		"date-fns": "^2.28.0",
 		"dayjs": "^1.11.0",
+		"jwt-decode": "^3.1.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.8",
